--- a/GuerrillaApp/src/main/resources/templates/login.html
+++ b/GuerrillaApp/src/main/resources/templates/login.html
@@ -8,14 +8,21 @@
 </head>
 <body>
 	<div class="respmenu">
+	<button onclick="goBack()">Go Back</button>
+
+<script>
+function goBack() {
+  window.history.back();
+}
+</script> 
   <input type="checkbox">
   <i class="fas fa-bars"></i>
   <i class="fas fa-times"></i>
   <nav>
     <ul>
-      <li><a href="#">My Profile</a></li>
-      <li><a href="#">Ranking</a></li>
-      <li><a href="#">Settings</a></li>
+      <li><a href="/guerrilla/myprofile">My Profile</a></li>
+      <li><a href="/guerrilla/ranking">Ranking</a></li>
+      <li><a href="/guerrilla/settings">Settings</a></li>
       <li><a href="#">LogOut</a></li>
     </ul>
   </nav>
@@ -32,10 +39,9 @@
 			<form action="#" method="POST" th:action="@{/login}" id="emailForm"
 				class="container">
 				<label for="CorreoElectronico"><b>Correo electrónico:
-				</b></label> <input type="text" name="CorreoElectronico" 	  id="CorreoElectronico"
+				</b></label> <input type="text" name="CorreoElectronico" id="CorreoElectronico"
 					placeholder="Ingrese su correo electrónico" required> <br>
-				<br> <input type="submit" name="Sign" id="BotonSign"
-					value="Sign">
+				    <a href="/guerrilla/sign">Sign</a>
                     <input type="submit" name="Login" id="BotonLogin"
 					value="Login">
 			</form>
